{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 28,
  "lineage": "42b485b6-e524-e5ec-87de-befc03cbccd9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-a0cfeed8",
            "arn": "arn:aws:ec2:us-west-2:036200974884:instance/i-074d3123198f25c7d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074d3123198f25c7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0473f1e8e075aba3b",
            "private_dns": "ip-10-1-0-237.us-west-2.compute.internal",
            "private_ip": "10.1.0.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 1500,
                "throughput": 0,
                "volume_id": "vol-06c26497959398e24",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cb975e81652895b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09874ac982b39aba7"
            ]
          },
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.ui",
            "module.vpc_networking.aws_subnet.private",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-a0cfeed8",
            "arn": "arn:aws:ec2:us-west-2:036200974884:instance/i-0cec0a7c164fee18c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cec0a7c164fee18c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2c85cff097ade69",
            "private_dns": "ip-10-1-16-164.us-west-2.compute.internal",
            "private_ip": "10.1.16.164",
            "public_dns": "ec2-35-88-103-193.us-west-2.compute.amazonaws.com",
            "public_ip": "35.88.103.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 1500,
                "throughput": 0,
                "volume_id": "vol-039cee76e464580c5",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0170011a343746288",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-008ec2d0cb3a481ca"
            ]
          },
          "dependencies": [
            "aws_security_group.ui",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:security-group/sg-09874ac982b39aba7",
            "description": "API security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09874ac982b39aba7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008ec2d0cb3a481ca"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "API",
            "name_prefix": "",
            "owner_id": "036200974884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-072890a12f112c284"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ui",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:security-group/sg-008ec2d0cb3a481ca",
            "description": "UI Security group. Supports TLS and HTTP.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008ec2d0cb3a481ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ui",
            "name_prefix": "",
            "owner_id": "036200974884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ui"
            },
            "tags_all": {
              "Name": "ui"
            },
            "timeouts": null,
            "vpc_id": "vpc-072890a12f112c284"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f307e5c6acedaab8",
            "domain": "vpc",
            "id": "eipalloc-0f307e5c6acedaab8",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-149-69-189.us-west-2.compute.amazonaws.com",
            "public_ip": "54.149.69.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "interview-vpc Private NAT GW"
            },
            "tags_all": {
              "Name": "interview-vpc Private NAT GW"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:internet-gateway/igw-0c278a15a2acd533c",
            "id": "igw-0c278a15a2acd533c",
            "owner_id": "036200974884",
            "vpc_id": "vpc-072890a12f112c284"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f307e5c6acedaab8",
            "connectivity_type": "public",
            "id": "nat-06775550f9ca27058",
            "network_interface_id": "eni-04b260ddbb157760b",
            "private_ip": "10.1.16.126",
            "public_ip": "54.149.69.189",
            "subnet_id": "subnet-0170011a343746288",
            "tags": {
              "Name": "interview-vpc Private Subnet NAT GW"
            },
            "tags_all": {
              "Name": "interview-vpc Private Subnet NAT GW"
            }
          },
          "dependencies": [
            "module.vpc_networking.aws_eip.nat",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:route-table/rtb-0a72be8570a3336c3",
            "id": "rtb-0a72be8570a3336c3",
            "owner_id": "036200974884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06775550f9ca27058",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "interview-vpc Private Subnet route table"
            },
            "tags_all": {
              "Name": "interview-vpc Private Subnet route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-072890a12f112c284"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_eip.nat",
            "module.vpc_networking.aws_nat_gateway.main",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:route-table/rtb-0542936d672155079",
            "id": "rtb-0542936d672155079",
            "owner_id": "036200974884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c278a15a2acd533c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "interview-vpc Public Subnet Route Table"
            },
            "tags_all": {
              "Name": "interview-vpc Public Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-072890a12f112c284"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_internet_gateway.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "interview_private_az_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e59577d584f9495",
            "route_table_id": "rtb-0a72be8570a3336c3",
            "subnet_id": "subnet-01cb975e81652895b"
          },
          "dependencies": [
            "module.vpc_networking.aws_eip.nat",
            "module.vpc_networking.aws_nat_gateway.main",
            "module.vpc_networking.aws_route_table.private",
            "module.vpc_networking.aws_subnet.private",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_private_az_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057fee8c47a5fd531",
            "route_table_id": "rtb-0a72be8570a3336c3",
            "subnet_id": "subnet-070eb7fd37589ccca"
          },
          "dependencies": [
            "module.vpc_networking.aws_eip.nat",
            "module.vpc_networking.aws_nat_gateway.main",
            "module.vpc_networking.aws_route_table.private",
            "module.vpc_networking.aws_subnet.private",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_private_az_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f9253d96bb76a79",
            "route_table_id": "rtb-0a72be8570a3336c3",
            "subnet_id": "subnet-08651a21d563bf622"
          },
          "dependencies": [
            "module.vpc_networking.aws_eip.nat",
            "module.vpc_networking.aws_nat_gateway.main",
            "module.vpc_networking.aws_route_table.private",
            "module.vpc_networking.aws_subnet.private",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "interview_public_az_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016852cdff445fa9e",
            "route_table_id": "rtb-0542936d672155079",
            "subnet_id": "subnet-0170011a343746288"
          },
          "dependencies": [
            "module.vpc_networking.aws_internet_gateway.public",
            "module.vpc_networking.aws_route_table.public",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_public_az_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f6e1b141bf221b3",
            "route_table_id": "rtb-0542936d672155079",
            "subnet_id": "subnet-04dfe9f74d03ae0f1"
          },
          "dependencies": [
            "module.vpc_networking.aws_internet_gateway.public",
            "module.vpc_networking.aws_route_table.public",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_public_az_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d76b0ad26acb8f9",
            "route_table_id": "rtb-0542936d672155079",
            "subnet_id": "subnet-0c83b26c18b0c0c07"
          },
          "dependencies": [
            "module.vpc_networking.aws_internet_gateway.public",
            "module.vpc_networking.aws_route_table.public",
            "module.vpc_networking.aws_subnet.public",
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:security-group/sg-037edc1e4ace1154a",
            "description": "Allow traffic to/from private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037edc1e4ace1154a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow everything to talk to everything inside of private",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "036200974884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "interview-vpc Private Subnet Access"
            },
            "tags_all": {
              "Name": "interview-vpc Private Subnet Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-072890a12f112c284"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:security-group/sg-037c11803107b96f2",
            "description": "Allow incoming traffic from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c11803107b96f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow everything to talk to everything inside of public",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "036200974884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "interview-vpc  Public subnet access"
            },
            "tags_all": {
              "Name": "interview-vpc  Public subnet access"
            },
            "timeouts": null,
            "vpc_id": "vpc-072890a12f112c284"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "interview_private_az_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:subnet/subnet-01cb975e81652895b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb975e81652895b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "036200974884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "interview_private_az_a"
            },
            "tags_all": {
              "Name": "interview_private_az_a"
            },
            "vpc_id": "vpc-072890a12f112c284"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_private_az_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:subnet/subnet-070eb7fd37589ccca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070eb7fd37589ccca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "036200974884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "interview_private_az_b"
            },
            "tags_all": {
              "Name": "interview_private_az_b"
            },
            "vpc_id": "vpc-072890a12f112c284"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_private_az_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:subnet/subnet-08651a21d563bf622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08651a21d563bf622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "036200974884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "interview_private_az_c"
            },
            "tags_all": {
              "Name": "interview_private_az_c"
            },
            "vpc_id": "vpc-072890a12f112c284"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "interview_public_az_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:subnet/subnet-0170011a343746288",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0170011a343746288",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "036200974884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "interview_public_az_a"
            },
            "tags_all": {
              "Name": "interview_public_az_a"
            },
            "vpc_id": "vpc-072890a12f112c284"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_public_az_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:subnet/subnet-04dfe9f74d03ae0f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.17.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dfe9f74d03ae0f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "036200974884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "interview_public_az_b"
            },
            "tags_all": {
              "Name": "interview_public_az_b"
            },
            "vpc_id": "vpc-072890a12f112c284"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "interview_public_az_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:subnet/subnet-0c83b26c18b0c0c07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.18.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c83b26c18b0c0c07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "036200974884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "interview_public_az_c"
            },
            "tags_all": {
              "Name": "interview_public_az_c"
            },
            "vpc_id": "vpc-072890a12f112c284"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:036200974884:vpc/vpc-072890a12f112c284",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ec47e114ddbefefc",
            "default_route_table_id": "rtb-02fdda4426cae4f8c",
            "default_security_group_id": "sg-00c0a632e731bb1dd",
            "dhcp_options_id": "dopt-d11415a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-072890a12f112c284",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02fdda4426cae4f8c",
            "owner_id": "036200974884",
            "tags": {
              "Name": "interview-vpc"
            },
            "tags_all": {
              "Name": "interview-vpc"
            }
          }
        }
      ]
    }
  ]
}